[gd_scene load_steps=8 format=3 uid="uid://nowb747qdxcw"]

[ext_resource type="Texture2D" uid="uid://bls8cee4nfwlc" path="res://player/player.png" id="1_oby1s"]
[ext_resource type="Script" path="res://player/player.gd" id="2_2h80n"]
[ext_resource type="AudioStream" uid="uid://birvxqnn3h8fw" path="res://sound/punch-short.mp3" id="3_g27ml"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2losx"]
atlas = ExtResource("1_oby1s")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_17qo6"]
atlas = ExtResource("1_oby1s")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_eu857"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2losx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_17qo6")
}],
"loop": false,
"name": &"punch",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vn0iu"]
radius = 41.0
height = 120.0

[node name="Player" type="Area2D"]
position = Vector2(54, 65)
script = ExtResource("2_2h80n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(13, 1)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_eu857")
animation = &"punch"
autoplay = "idle"
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(13, 8)
shape = SubResource("CapsuleShape2D_vn0iu")

[node name="PunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g27ml")

[connection signal="area_entered" from="." to="." method="_on_player_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_player_area_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animation_finished"]
